--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "setup-db": "node scripts/setup_database.js",
+    "update-customers": "node scripts/update_customers.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
