--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "setup-db": "node scripts/setup_database.js",
+    "setup-admin-users": "node scripts/setup_admin_users.js",
     "update-customers": "node scripts/update_customers.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -24,7 +25,8 @@
     "cors": "^2.8.5",
     "body-parser": "^1.20.2",
     "mysql2": "^3.6.5",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "bcrypt": "^5.1.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
